2007-02-18  Marius Vollmer  <mvo@zagadka.de>

	* src/apt-worker.cc (appenappend_system_sources,
	append_system_source_dir): New.
	(cmd_get_catalogue): Include the system sources in the reply as
	"source" xexps.
	(cmd_set_catalogues): Ignore "source" xexps in the argument.

	* src/repo.h, src/repo.cc (with_catalogues, get_catalogues):
	Renamed former to latter.
	(set_catalogues): Added continuation, updated all callers.
	(add_catalogues): New.
	(make_catcache_from_xexp): Handle "source" xexps.

	* src/instr.cc (open_local_install_instructions): Experimentally
	call add_catalogues when the instructions file can be read as an
	xexp.
	
	* src/xexp.h, src/xexp.c (xexp_copy, xexp_aref_int,
	xexp_adel_all): New.

	* src/apt-worker.cc (cmd_set_catalogues): Ignore non-"catalogue"
	entries when writing the sources for apt.
	* src/repo.cc (set_cat_list): Likewise when filling the list widget.

	Support for X-Expressions and initial rich catalogue
	configurations based on them.
	
	* src/xexp.h, src/xexp.x: New.
	* Makefile.am: Add them to both hildon-application-manager and
	apt-worker.
	* src/apt-worker-proto.cc (apt_proto_decoder::decode_xexp,
	apt_proto_encoder::encode_xexp): New.
	(APTCMD_GET_CATALOGUES, APTCMD_SET_CATALOGUES): New.
	* src/apt-worker-client.h,
	src/apt-worker-client.cc (apt_worker_get_catalogues,
	apt_worker_set_catalogues): New.
	(apt_worker_temp_set_sources_list): Removed, it was unused.
	* src/apt-worker.cc (cmd_get_catalogues, cmd_set_catalogues): New.

	* src/repo.h, src/repo.cc (get_catalogues, set_catalogues): New.
	(show_repo_dialog): Rewritten with new X-Expression representation
	of catalogues.
	(add_entry): Handle end == NULL.
	
2007-02-15  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 5.0pre4
	
	* src/main.cc (install_package): Added 'ask' parameter and
	suppress confirmation dialog when it is false.  Changed all
	callers so that we don't ask again after showing the multi-package
	confirmation dialog.